--- a/portfolio/src/styles/components/Portfolio.css
+++ b/portfolio/src/styles/components/Portfolio.css
@@ -247,55 +247,49 @@
     }
    
   }
-  @media screen and (max-width: 599px) and (min-width: 375){
-    .prev{
-      max-width: 80px;
-      position: relative;
-      top: 0px;
-      right: 80px;
+  @media screen and (max-width: 599px) {
+    #portfolio{
+      background: none;
+      max-width: 599px;
+      height: 480px;
     }
-    .next{
-      max-width: 80px;
+    .carousel-buttons{
       position: relative;
-      top: 0px;
-      left: 80px;
+      bottom: 750px;
     }
     .portfolioContent img{
-      max-width: 350px;
-      position: relative;
-      bottom: 100px;
-    }
-    .carousel-dots span.active{
-      width: 10px;
-      height: 10px;
+      max-width: 250px;
+      width: 100%;
+      margin: auto;
+      height: 300px;
+      object-fit: contain;
     }
     .carousel-dots span{
-      width: 7px;
-      height: 7px;
+      height:7px;
+      width:7px;
+    }
+    .carousel-dots span.active{
+      height:10px;
+      width:10px;
     }
     .carousel-dots{
-      bottom: 500px;
-    }
-    .containSite h2{
-      font-size: 35px;
-    }
-    .overlay span{
-      font-size: 18px;
-    }
-    .containSite p{
-      font-size: 13px;
+      position: relative;
+    bottom: 420px;
     }
     .containSite{
       position: relative;
-    top:-100px;
-  
+      top: 0px;
     }
-    #portfolio{
-      height: 500px;
-    border-radius: 30px;
+    .containSite h2{
+      font-size: 30px;
+    }
+    .overlay span{
+      font-size: 18px;;
+    }
+    .containSite p{
+      font-size: 14px;
     }
   }
+    
   
-  @media screen and (max-width: 374px) {
-      
-  }
+  
