--- a/portfolio/src/styles/components/Apropos.css
+++ b/portfolio/src/styles/components/Apropos.css
@@ -142,9 +142,11 @@
     }
     .AboutMe h3{
         font-size: 16px;
+        max-width: 375px;
     }
     .AboutMe h2{
         font-size: 17px;
+        text-align: center;
     }
     .portrait-margaux button{
         height: 30px;
