--- a/portfolio/src/styles/components/Contact.css
+++ b/portfolio/src/styles/components/Contact.css
@@ -195,6 +195,10 @@ form{
     .containContact{
       flex-direction: column;
     }
+    form{
+      max-width: 375px;
+      width: 100%;
+    }
   }
   
  
