--- a/portfolio/src/styles/pages/_settings.css
+++ b/portfolio/src/styles/pages/_settings.css
@@ -1,386 +1,31 @@
 *{
     box-sizing: border-box;
     width:100%;
-    max-width: 2400px;
+    max-width: 2200px;
     margin: auto;
+}
+h1, h2, h3, h4, li{
+  font-family : "Noto Serif Display", serif;
+  font-weight: 400;
 }
 h1{
-  font-family: "Dancing Script", cursive;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 70px;
-    color: #F18971;
-    max-width: 1400px;
-    margin-bottom: 50px;
-    text-shadow: 3px 4px 5px #bab9b9;
-    border-top: 1px solid;
-    margin-top: 200px;
-    animation: slideInFromRight 7s ease forwards;
-    text-align: justify;
-}
-@keyframes slideInFromRight {
-  from {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-h2{
-  font-size: 28px;
-    text-transform: capitalize;
-    max-width: 1400px;
-    width: 100%;
-    margin: auto;
-    padding-bottom: 25px;
-}
-h2, h3, h4, p, a {
-  font-family: "El Messiri", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
-  text-align: justify;
+  font-size: 50px;
+  font-weight: 500;
+  color: hsl(11deg 76.79% 68.39%);
 }
 p{
-  font-size: 22px;
-  font-style: inherit;
-}
-a{
-  text-decoration: none;
-  color: #F18971;
-}
-a:hover{
-  color:#008a77;
-}
-.progressBar {
-  position: fixed;
-  left: 0;
-  top:0px;
-  height: 15px;
-  background:linear-gradient(172deg, #f18971, #f1897129);
-  z-index: 999;
-  transition: height 0.3s ease;
-}
-
-/* Cette règle CSS fera en sorte que la barre de progression se déplace de haut en bas */
-.progressBar.scrollTop {
-  top: 0;
-}
-
-/* Cette règle CSS fera en sorte que la barre de progression se déplace de bas en haut */
-.progressBar.scrollBottom {
-  bottom: 0;
-}
-
-.App{
-  padding: 20px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 500;
 }
 .JourNight{
+  width:50px;
+  height: 50px;
+  font-size: 25px;
+  background-color: hsl(11deg 76.79% 68.39%);
+  border:1px solid hsl(11deg 76.79% 68.39%);
+  border-radius: 7px;
+  box-shadow: 2px 2px 2px #524e4e;
   position: absolute;
-  top: 50px;
-  right: 100px;
-  width: 100px;
-  padding: 15px;
-  border-radius: 55px;
-  border: 1px solid;
-  font-family: "Dancing Script", cursive;
-  font-size: 30px;
-  font-weight: bold;
-  background-color: #fff0;
-  color: #f18971;
+  top:70px;
+  right:70px;
 }
-/* Styles pour le mode jour */
-.day-mode {
-  background-color: #f8f8f8;
-  color: #0D3653;
-}
-.day-mode p{
-  color: #0D3653;
-}
-
-
-.day-mode .submitContact{
-  background: #008a77;
-  color: #ededed;
-  box-shadow: 2px 2px 6px #8d8989;
-}
-.day-mode .submitContact:hover{
-  background-color: #F18971;
-}
-
-
-/* Styles pour le mode nuit */
-.night-mode {
-  background-color: #000000;
-  color: #f6f6f6;
-}
-.night-mode .progressBar{
-  background:linear-gradient(172deg, #008A77, #008a784d);
-}
-.night-mode .nav a{
-  color: #F18971;
-}
-
-.night-mode .nav a:hover{
-  color: #008A77;
-}
-.night-mode .overlay span {
-  color: #000;
-}
-.night-mode .overlay span:hover {
-  color: #fff;
-}
-.night-mode .AboutMe h2{
-  color:#F18971;
-}
-.night-mode .AboutMe h3{
-  color:#ededed;
-}
-.night-mode .footer{
-  background-color: #f6f6f6;
-  border-top: #5ebdb0 8px solid;
-}
-.night-mode .list-contact a{
-  color: #0D3653;
-}
-.night-mode h1{
-  color:#5EBDB0;
-}
-.night-mode .homepage{
-  background: linear-gradient(281deg, #87ffef, #203e3a5e);
-}
-.night-mode h1{
-  text-shadow: 3px 4px 5px #414141;
-}
-.night-mode .skills h2{
-  color: #5EBDB0;
-  text-transform: uppercase;
-  text-align-last: start;
-  text-decoration-line: overline;
-}
-.night-mode a{
-  color: #5EBDB0;
-}
-.night-mode a:hover, .night-mode label{
-  color:#F18971;
-}
-.night-mode textarea, .night-mode input{
-  background-color:#f1897130;
-}
-.night-mode .buttonCv{
-  background-color:#F18971;
-}
-.night-mode #portfolio{
-  background: linear-gradient(281deg, #87ffef, #203e3a5e);;
-}
-.night-mode .portfolioMe h1, .night-mode .carousel-buttons svg, .night-mode .containSite h2, .night-mode .containSite p, .night-mode .portfolioMe .carousel-dots span.active {
-  color:#ededed;
-}
-.night-mode .buttonCv:hover{
-  background-color:#5EBDB0;
-}
-.night-mode .submitContact{
-  background: #F18971;
-  color: #ededed;
-  box-shadow: 2px 2px 6px #393838;
-}
-.night-mode .submitContact:hover{
-  background-color: #008A77;
-}
-.night-mode .portrait-margaux button{
-  box-shadow: 2px 3px 7px #5e5e5e;
-}
-.night-mode .homepage h1{
-  color:#cae9ff
-}
-.JourNight svg{
-  font-size: 30px;
-}
-.night-mode .portfolioMe .carousel-dots span {
-  background-color: #ededed72;  
-}
-
-.night-mode .portfolioMe .carousel-dots span.active {
-  background-color: #ededed;
-}
-
-.CvOnline{
-  background-color: #a8a8a8;
-}
-.CvOnline:hover{
-  background-color: #0D3653;
-}
-.night-mode .portfolioOnline a,.night-mode .portfolioOnline a:hover{
-  color:#ededed;
-}
-
-
-.header{
-  display: flex;
-  max-width: 1400px;
-  width: 100%;
-  margin: auto;
-  margin-bottom: 100px;
-}
-
-@media screen and (max-width: 1400px) and (min-width: 1024px){
-  *{
-    max-width: 1400px;
-  }
-  h1{
-    max-width: 1000px;
-    font-size: 55px;
-  }
-  h2{
-    font-size: 26px;
-  }
-  p{
-    font-size: 18px;
-  }
-  .header{
-    max-width: 1000px;
-  }
-  .JourNight{
-    width: 80px;
-    top: 30px;
-    right: 30px;
-  }
-}
-@media screen and (max-width: 1023px) and (min-width: 900px){
-    .JourNight svg{
-      font-size: 25px;
-    }
-    .JourNight{
-      width: 60px;
-      padding: 0px;
-      top: 40px;
-     
-    }
-    *{
-      max-width: 1023px;
-    }
-     .header, .containFooter, .headerHome{
-      max-width: 900px;
-    }
-   label{
-      font-size: 16px;
-    }
-    p{
-      font-size: 16px !important;
-    }
-    h1{
-      font-size: 50px;
-    }
-}
-@media screen and (max-width: 899px) and (min-width: 768px){
- *{
-  max-width: 899px;
-  width:100%;
- }
- h1{
-  font-size: 50px;
- }
- p{
-  font-size: 16px;
- }
-  .containFooter, .headerHome{
-    max-width: 768px;
-  }
-  .header{
-    max-width: 768px;
-    display: flex;
-    flex-direction: column;
-  }
-  .nav{
-    max-width: 768px;
-  }
-  .logo{
-    max-width: 899px;
-    width: 10%;
-    padding-bottom: 50px;
-  }
-  .JourNight{
-    top: 30px;
-    right: 50px;
-    width: 50px;
-    padding: 5px;
-  }
-  .JourNight svg{
-    font-size: 25px;
-  }
-}
-@media screen and (max-width: 767px) and (min-width: 600px){
-    *{
-      max-width: 767px;
-    }
-    h1{
-      font-size: 35px;
-    }
-    p{
-      font-size: 15px;
-    }
-    .header{
-      max-width: 600px;
-      display: flex;
-      flex-direction: column;
-    }
-    .JourNight svg{
-      font-size: 20px;
-    }
-    .JourNight{
-      position: absolute;
-      top: 30px;
-      right: 50px;
-      width: 60px;
-      padding: 0px;
-    }
-}
-@media screen and (max-width: 599px) {
-  *{
-    max-width: 599px;
-  }
-  h1{
-    font-size: 35px;
-    max-width: 375px;
-  }
-  p{
-    font-size: 15px;
-    max-width: 375px;
-  }
-  .header{
-    max-width: 600px;
-    display: flex;
-    flex-direction: column;
-  }
-  .JourNight svg{
-    font-size: 20px;
-  }
-  .JourNight{
-    position: absolute;
-    right: 20px;
-    width: 50px;
-    width: 60px;
-    padding: 0px;
-  }
-  .night-mode .homepage{
-    background: linear-gradient(281deg, #87ffef, #000000d6);
-    max-width: 599px;
-    width: 100%;
-    position: relative;
-    left: 20px;
-    border-radius: 0px;
-  }
-  .night-mode #portfolio{
-    background: linear-gradient(281deg, hsla(0, 0%, 0%, 0.1), hsl(0deg 0% 0% / 0%));
-  }
-  .night-mode .portfolioMe h1{
-    border-top: 1px solid #5ebdb0;
-  text-shadow: none;
-  color: #5ebdb0;
-  padding-top: 0px;
-  }
-}
-
-
