--- a/portfolio/src/styles/components/logo.css
+++ b/portfolio/src/styles/components/logo.css
@@ -1,37 +1,10 @@
-.logo img{
-    max-width: 100px;
+.logoMD{
+    max-width: 150px;
+    object-fit: cover;
     width: 100%;
-    margin: auto;
-}
-
-@media screen and (max-width: 1400px) and (min-width: 1024px){
-    .logo img{
-        max-width: 80px;
-    }
-}
-@media screen and (max-width: 1023px) and (min-width: 900px){
-    
-}
-@media screen and (max-width: 899px) and (min-width: 768px){
-    
-}
-@media screen and (max-width: 767px) and (min-width: 600px){
-    .header .logo img{
-        max-width: 80px;
-        margin-left: 30%;
-    }
-    .logo{
-        width: 50%;
-    }
-}
-@media screen and (max-width: 599px) {
-    .header .logo img{
-        max-width: 80px;
-        margin-left: 30%;
-    }
-    .logo{
-        width: 50%;
-    }
+    margin: 25px;
+    margin-left: 50px;
+    margin-top: 20px;
 }
 
 
