--- a/portfolio/src/styles/pages/_settings.css
+++ b/portfolio/src/styles/pages/_settings.css
@@ -4,7 +4,7 @@
     max-width: 2200px;
     margin: auto;
 }
-h1, h2, h3, h4, li{
+h1, h2, h3, h4, li, button{
   font-family : "Noto Serif Display", serif;
   font-weight: 400;
 }
@@ -12,6 +12,24 @@ h1{
   font-size: 50px;
   font-weight: 500;
   color: hsl(11deg 76.79% 68.39%);
+}
+h2{
+  font-size: 48px;
+    text-align: center;
+    text-transform: capitalize;
+    font-style: italic;
+}
+h4{
+  max-width: 1800px;
+    width: 100%;
+    margin: auto;
+    color: hsla(11, 100%, 62.2%, 1);
+    font-size: 25px;
+    text-transform: uppercase;
+}
+h3{
+  font-size: 24px;
+  font-weight: 600;
 }
 p{
   font-family: "Bodoni Moda", serif;
