--- a/portfolio/src/styles/pages/Home.css
+++ b/portfolio/src/styles/pages/Home.css
@@ -58,3 +58,20 @@
     background-color: #f2f2f25c;
     color:white;
 }
+.monHistoire{
+    background-color: hsl(0deg 0% 0%);
+
+}
+.monHistoire h2{
+    color:#fff;
+}
+.monHistoire .titre{
+    padding-top: 30px;
+    padding-bottom: 70px;
+}
+.imgApropos{
+    width: 500px;
+    background: hsl(11deg 84.11% 89.44%);
+    border-radius: 50%;
+    padding: 50px;
+}
