--- a/portfolio/src/styles/pages/Home.css
+++ b/portfolio/src/styles/pages/Home.css
@@ -11,8 +11,8 @@
     width: 100%;
 }
 .menuheader{
-    max-width: 1200px;
-    margin: 0px;
+    max-width: 800px;
+    margin-right: 650px;
     width: 100%;
 }
 .header{
@@ -60,10 +60,13 @@
 }
 .monHistoire{
     background-color: hsl(0deg 0% 0%);
-
+    max-width: 2200px;
+    width: 100%;
+    margin: 0px;
 }
+
 .monHistoire h2{
-    color:#fff;
+    color:#bebebe;
 }
 .monHistoire .titre{
     padding-top: 30px;
@@ -74,4 +77,10 @@
     background: hsl(11deg 84.11% 89.44%);
     border-radius: 50%;
     padding: 50px;
+}
+.monHistoire .annotation h4{
+    color:hsl(11deg 76.79% 68.39%);
+}
+.monHistoire .titre .tirettitre, .monHistoire .titre .pointtitre{
+        background-color: hsl(11deg 76.79% 68.39%);
 }
