commit -m "modif nav"

--- a/portfolio/src/styles/pages/Home.css
+++ b/portfolio/src/styles/pages/Home.css
@@ -11,8 +11,8 @@
     width: 100%;
 }
 .menuheader{
-    max-width: 800px;
-    margin-right: 650px;
+    max-width: 1200px;
+    margin: 0px;
     width: 100%;
 }
 .header{
