--- a/portfolio/src/styles/components/Footer.css
+++ b/portfolio/src/styles/components/Footer.css
@@ -26,3 +26,11 @@
     font-weight: 700;
     color: #0C3450;
 }
+.textfooter ul{
+    list-style-type: none;
+    max-width: 300px;
+    width: 100%;
+    margin:0px;
+    display: flex;
+    padding-top: 30px;
+}
