--- a/portfolio/src/styles/components/ImgBW.css
+++ b/portfolio/src/styles/components/ImgBW.css
@@ -1,6 +1,7 @@
 .header .headerimg img{
-    max-width: 1400px;
-    width:100%;
-    height:900px;
+    max-width: 900px;
+    width: 100%;
+    height: 700px;
     object-fit: cover;
+    float: inline-end;
 }
