--- a/portfolio/src/styles/pages/Home.css
+++ b/portfolio/src/styles/pages/Home.css
@@ -2,7 +2,7 @@
     max-width: 2200px;
     width: 100%;
     display: flex;
-    background-color: black;
+    background-color: #1d1d1d;
     border-bottom: 1px solid hsla(252,13%,46%,1);
 }
 .logoheader{
@@ -16,7 +16,7 @@
     width: 100%;
 }
 .header{
-    background-color: black;
+    background-color:#1d1d1d;
     display: flex;
 }
 
@@ -33,6 +33,8 @@
     max-width: 1400px;
     width: 100%;
     margin: auto;
+    padding-top: 100px;
+    margin-top: 80px;
 }
 .buttonHeader{
     max-width: 600px;
@@ -59,7 +61,7 @@
     color:white;
 }
 .monHistoire{
-    background-color: hsl(0deg 0% 0%);
+    background-color: #1d1d1d;
     max-width: 2200px;
     width: 100%;
     margin: 0px;
