--- a/portfolio/src/styles/components/AnimationText.css
+++ b/portfolio/src/styles/components/AnimationText.css
@@ -1,5 +1,5 @@
 .header h4{
-    color: hsl(11deg 100% 84.91%);
+    color: #f1d276;
     font-size: 20px;
     font-style: normal;
     font-weight: 200;
