--- a/portfolio/src/styles/components/Apropos.css
+++ b/portfolio/src/styles/components/Apropos.css
@@ -1,9 +1,11 @@
 .AboutMe h3{
-    color: hsl(11deg 76.79% 68.39%);
+    color: #F1D276;
     vertical-align: text-top;
     text-align: center;
     font-weight: 300;
     font-size: 20px;
+    z-index: 11111;
+    position: absolute;
 }
 .portrait-text{
     max-width: 800px;
@@ -12,7 +14,7 @@
     padding-top: 50px;
 }
 .portrait-text p{
-    color: #bebebe;
+    color: #E1E7CE;
     max-width: 1400px;
     text-align: justify;
     font-size: 15px;
@@ -47,20 +49,20 @@
     width: 250px;
     height: 50px;
     font-size: 14px;
-    background: hsl(11deg 76.79% 68.39%);
+    background: hsl(339, 35%, 79%);
     border: 0px solid;
-    border-radius: 10px;
+    border-radius: 5px;
     position: relative;
     bottom: 50px;
     left: 1300px;
-    color: white;
+    color: #09002d;
     font-weight: 400;
-    box-shadow: 2px 4px 4px #656565;
+    box-shadow: 2px 2px 2px #e4c5d0;
 }
 .buttonCv:active{
     background-color: transparent;
-    border:2px solid hsl(11deg 76.79% 68.39%);
-    color:hsl(11deg 76.79% 68.39%);
+    border:2px solid hsl(44, 89%, 33%);
+    color: hsl(44, 89%, 33%);
 }
 @keyframes zoomAnimation {
     0% {
