--- a/portfolio/src/styles/components/ContactForm.css
+++ b/portfolio/src/styles/components/ContactForm.css
@@ -1,34 +1,36 @@
 form{
     max-width: 1200px;
     width: 100%;
-    border: 1px solid hsla(11, 100%, 62.2%, 1);
+    border: 1px solid hsl(44, 89%, 33%);
+    background-color: #9f7809;
     padding: 50px;
     margin-top: 60px;
     margin-bottom: 40px;
-    box-shadow: 4px 4px 6px hsl(11deg 76.79% 68.39% );
+    box-shadow: 2px 2px 3px hsl(45, 69%, 66%);
 }
-label{
-    color: hsla(11, 100%, 62.2%, 1);
+label, span{
+    color: hsl(252, 100%, 9%);
     font-family: "Bodoni Moda", serif;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 18px;
+    background-color: #9f7809;
 }
 input{
-    border: 0.5px solid hsla(11, 100%, 62.2%, 1);
+    border: 0.5px solid hsl(44, 89%, 33%);
     height: 30px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
 textarea{
-    border: 0.5px solid hsla(11, 100%, 62.2%, 1);
+    border: 0.5px solid hsl(252, 100%, 9%);
     height: 80px;
     padding-top: 5px;
     padding-bottom: 5px;
 
 }
 Form button{
-    color: white;
-    background: hsla(11, 100%, 62.2%, 1);
+    color: #9f7809;
+    background: hsl(252, 100%, 9%);
     border: 0px;
     height: 30px;
     font-size: 14px;
@@ -37,7 +39,7 @@ Form button{
     position: relative;
     left: 900px;
     top: 15px;
-    box-shadow: 4px 4px 8px #b6b6b6;
+    box-shadow: 2px 2px 3px #e4c66d;
     border-radius: 7px;
 }
  Form button:active{
