--- a/portfolio/src/styles/components/Services.css
+++ b/portfolio/src/styles/components/Services.css
@@ -2,22 +2,24 @@
     max-width: 200px;
     width: 100%;
     height:180px;
-    border: 2px solid hsl(11deg 76.79% 68.39%);
+    border: 2px solid #9f7809;
+
+    border-radius: 15px;
     padding: 20px;
     position: relative;
     right: 23px;
 }
 .tirettitre{
-    background-color: hsla(11, 100%, 62.2%, 1);
-    border: 1px solid hsla(11, 100%, 52.2%, 1);
+    background-color:  #CC9789;
+    border: #CC9789;
     width: 28px;
     height: 5px;
     position: relative;
     left: 380px;
 }
 .pointtitre{
-    background-color: hsla(11, 100%, 62.2%, 1);
-    border: 1px solid hsla(11, 100%, 52.2%, 1);
+    background-color: #CC9789;
+    border: 1px solid #CC9789;
     width: 5px;
     height: 5px;
     position: relative;
@@ -36,6 +38,9 @@
 .titleservice h3{
     left: 0px;
     position: relative;
+    color: #9f7809;
+    text-transform: uppercase;
+    font-size: 25px;
 }
 .containService{
     display: flex;
