--- a/portfolio/src/styles/pages/_settings.css
+++ b/portfolio/src/styles/pages/_settings.css
@@ -3,6 +3,8 @@
     width:100%;
     max-width: 2200px;
     margin: auto;
+  background-color: #010117;
+
 }
 h1, h2, h3, h4, li, button{
   font-family : "Noto Serif Display", serif;
@@ -11,21 +13,25 @@ h1, h2, h3, h4, li, button{
 h1{
   font-size: 38px;
   font-weight: 500;
-  color: hsl(11deg 76.79% 68.39%);
+  color: #f1d276;
 }
 h2{
   font-size: 32px;
     text-align: center;
     text-transform: capitalize;
     font-style: italic;
+  color: #f1d276;
+
 }
 h4{
   max-width: 1800px;
-    width: 100%;
-    margin: auto;
-    color: hsla(11, 100%, 62.2%, 1);
-    font-size: 22px;
-    text-transform: uppercase;
+  width: 100%;
+  margin-left: 50px;
+  color: #CC9789;
+  font-size: 35px;
+  text-transform: uppercase;
+  padding-bottom: 15px;
+
 }
 h3{
   font-size: 20px;
