--- a/portfolio/src/styles/pages/Home.css
+++ b/portfolio/src/styles/pages/Home.css
@@ -2,9 +2,9 @@
     max-width: 2200px;
     width: 100%;
     display: flex;
-    background-color: #1d1d1d;
     border-bottom: 1px solid hsla(252,13%,46%,1);
 }
+
 .logoheader{
     max-width: 1000px;
     margin: 0px;
@@ -16,7 +16,6 @@
     width: 100%;
 }
 .header{
-    background-color:#1d1d1d;
     display: flex;
 }
 
@@ -28,20 +27,19 @@
 .titre{
     padding-top: 120px;
     padding-left: 50px;
+    border-top :1px solid #9f7809;
 }
 .headerimg{
     max-width: 1400px;
     width: 100%;
     margin: auto;
-    padding-top: 100px;
-    margin-top: 80px;
 }
 .buttonHeader{
     max-width: 600px;
     width: 100%;
     margin: auto;
     display: flex;
-    padding-top:150px;
+    padding-top:50px;
 }
 .buttonHeader button{
     max-width: 250px;
@@ -49,27 +47,35 @@
     margin: auto;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: 1px 4px 17px #f2f2f25c;
-    background-color: hsl(11deg 76.79% 68.39%);
+    box-shadow: 1px 4px 17px #06011c;
+    background-color: #9f7809;
     border: 0px solid ;
     font-size: 14px;
     font-weight: 500;
     text-transform:capitalize;
 }
-.buttonHeader button:active{
-    background-color: #f2f2f25c;
-    color:white;
+.service {
+    border-top: 1px solid #9f7809;
 }
+.buttonHeader button a{
+    color:#E1E7CE;
+    text-decoration: none;
+    background-color: #9f7809;
+    text-transform:uppercase;
+}
+.buttonHeader button:hover{
+    background-color: #CC9789;
+
+}
+
 .monHistoire{
-    background-color: #1d1d1d;
+    background-color: hsl(0deg 0% 0%);
     max-width: 2200px;
     width: 100%;
     margin: 0px;
 }
 
-.monHistoire h2{
-    color:#bebebe;
-}
+
 .monHistoire .titre{
     padding-top: 30px;
     padding-bottom: 70px;
@@ -80,9 +86,5 @@
     border-radius: 50%;
     padding: 50px;
 }
-.monHistoire .annotation h4{
-    color:hsl(11deg 76.79% 68.39%);
-}
-.monHistoire .titre .tirettitre, .monHistoire .titre .pointtitre{
-        background-color: hsl(11deg 76.79% 68.39%);
-}
+
+
