--- a/portfolio/src/styles/pages/_settings.css
+++ b/portfolio/src/styles/pages/_settings.css
@@ -41,18 +41,40 @@ p{
   font-family: "Bodoni Moda", serif;
   font-weight: 500;
 }
-.JourNight{
-  width:50px;
-  height: 50px;
-  font-size: 25px;
-  background-color: hsl(11deg 76.79% 68.39%);
-  border:1px solid hsl(11deg 76.79% 68.39%);
-  border-radius: 7px;
-  box-shadow: 2px 2px 2px #524e4e;
-  position: absolute;
-  top:70px;
-  right:70px;
-}
+
 .contactMe .annotation h4{
   margin-left: 85px;
+}
+.containTitle h2{
+  margin: 50px 0px;
+  font-size: 55px;
+  color:#CC9789;
+}
+.presentation h3{
+  font-size:45px;
+  text-align: center;
+  color: #9f7809;
+  margin-bottom: 50px;
+}
+.presentation p{
+  width: 95%;
+  text-align: start;
+  color:#E1E7CE;
+  font-size: 16px;
+  padding-bottom: 50px;
+}
+.formation h2, .projets h2, .competences h2, .qualites h2{
+  color: #9f7809;
+}
+.formation h4, .projets h4, .competences h4, .qualites h4{
+  font-size: 18px;
+  color: #CC9789;
+}
+.formation p, .projets p, .qualites p{
+  margin-left: 50px;
+  color:#E1E7CE;
+  margin-bottom: 20px;
+}
+.listService ul{
+  margin-bottom: 50px;
 }
