--- a/portfolio/src/styles/pages/CVonline.css
+++ b/portfolio/src/styles/pages/CVonline.css
@@ -23,7 +23,7 @@
 
 /* Section du texte */
 .textSection {
-    flex: 0 0 50%;
+    flex: 0 0 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -39,11 +39,22 @@
     margin-bottom: 15px;
     color: #666; /* Couleur secondaire */
 }
-
+.qualites p{
+    margin-bottom: 200px;
+    }
 .textSection p {
     font-size: 16px;
     line-height: 1.6;
-    text-align: justify; /* Justifie le texte */
+    text-align: justify;
+}
+.listService li, .listUsers li{
+margin-left:50px;
+}
+.listService li::before, .listUsers li::before{
+height:0px;
+}
+.listService li:hover, .listUsers li:hover{
+    color:#9f7809;;
 }
 
 /* Style pour les tablettes en mode paysage (1024px max) */
