--- a/portfolio/src/styles/pages/Home.css
+++ b/portfolio/src/styles/pages/Home.css
@@ -23,6 +23,7 @@
     max-width: 700px;
     width: 100%;
     margin: auto;
+    margin-left:300px;
 }
 .headerText .titre{
     border:0px;
@@ -42,7 +43,7 @@
     width: 100%;
     margin: auto;
     display: flex;
-    padding-top:50px;
+    padding:50px 0px;
 }
 .buttonHeader button{
     max-width: 250px;
@@ -89,5 +90,64 @@
     border-radius: 50%;
     padding: 50px;
 }
+
+
+@media (max-width: 1024 px) {
+
+p{
+max-width:900px;
+width:100%;
+
+}
+
+}
+
+/* Tablette verticale (768px max) */
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column; /* Empile les éléments verticalement */
+        align-items: center;
+        text-align: center;
+    }
+
+    .headerimg {
+        order: -1;
+        max-width: 100%;
+       margin:0px;
+    }
+
+    .headerText {
+        max-width: 90%;
+        margin: 0 10px;
+    }
+    .fade-in{
+    margin:0px;}
+}
+
+/* Téléphone (480px max) */
+@media (max-width: 480px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .headerimg {
+        order: -1;
+        max-width: 100%;
+        margin-bottom: auto;
+    }
+
+    .headerText {
+        max-width: 100%;
+        margin: 0 10px;
+    }
+
+    .buttonHeader {
+        flex-direction: column;
+        gap: 10px;
+}
+}
+
 
 
